syntax = "proto3";

package changelog;

import "google/api/annotations.proto";
import "openapi/v3/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "types/types.proto";

option go_package = "github.com/duc-cnzj/mars/api/v5/changelog;changelog";

message FindLastChangelogsByProjectIDRequest {
  int32 project_id   = 1 [(validate.rules).int32.gt = 0, (google.api.field_behavior) = REQUIRED];
  bool  only_changed = 2;
}

message FindLastChangelogsByProjectIDResponse {
  repeated types.ChangelogModel items = 1;
}

service Changelog {
  rpc FindLastChangelogsByProjectID(FindLastChangelogsByProjectIDRequest) returns (FindLastChangelogsByProjectIDResponse) {
    option (google.api.http)      = {
      post: "/api/changelogs/find_last_changelogs_by_project_id",
      body: "*"
    };

    option (openapi.v3.operation) = {
      summary: "查看项目改动日志",
    };
  }
}
